--- a/java/temp-beans/src/main/resources/application.yml
+++ b/java/temp-beans/src/main/resources/application.yml
@@ -3,9 +3,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://148.70.72.182:3306/love?serverTimezone=Asia/Shanghai&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/love?serverTimezone=Asia/Shanghai&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false
     username: root
-    password: Xyyxyy123
+    password: xxxx
 server:
   port: 9999
 zjh:
