--- a/java/service-feign/src/main/resources/application.yml
+++ b/java/service-feign/src/main/resources/application.yml
@@ -1,11 +1,14 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka/
 server:
   port: 8766
 spring:
   application:
     name: service-feign
-
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 feign.hystrix.enabled: true
