--- a/java/eurekaclient/src/main/resources/application.yml
+++ b/java/eurekaclient/src/main/resources/application.yml
@@ -1,9 +1,14 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://192.168.139.52:8761/eureka/
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://192.168.139.52:8761/eureka/
+
 server:
-  port: 8763
+  port: 8765
 spring:
   application:
     name: eureka-client
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
