--- a/java/service-zuul/src/main/resources/application.yml
+++ b/java/service-zuul/src/main/resources/application.yml
@@ -1,12 +1,16 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka/
 server:
   port: 8769
 spring:
   application:
     name: service-zuul
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 zuul:
   routes:
     api-ribbon:
