--- a/java/config-server/src/main/resources/application.yml
+++ b/java/config-server/src/main/resources/application.yml
@@ -1,14 +1,19 @@
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
 server:
   port: 8888
-
-
 spring:
   application:
     name: config-server
   cloud:
     config:
-    server.git.uri: https://github.com/forezp/SpringcloudConfig/
-    server.git.searchPaths: respo
-    label: master
-    server.git.username:  zjhChester
-    server.git.password:  Abcd35873
+      label: master
+      server:
+        git:
+          searchPaths: respo
+          uri: https://github.com/forezp/SpringcloudConfig/
+          username: zjhChester
+          password: Abcd35873
+
