--- a/java/server-zipkin/src/main/resources/application.yml
+++ b/java/server-zipkin/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 server:
-  port: 8988
+  port: 9411
 spring:
   application:
-    name: service-hi
-  zipkin:
-    base-url: http://localhost:9411
+    name: service-zipkin
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
